sftp-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftp-server
  namespace: sftp
spec:
  selector:
    app: sftp-server
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
      name: sftp-main-port
