sftp-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sftp-server
  namespace: sftp
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
      - sftp.lag0.com.br
    secretName: lag0-sftp-certificate
  rules:
  - host: sftp.lag0.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sftp-server
            port:
              number: 22
  ingressClassName: nginx
